Featured image is now used as hero banner
