# swagger.yaml
@@ -4622,6 +4622,33 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
       operationId: GetWpV2Customize
+  /wp/v2/postThumbnail:
+    get:
+      parameters:
+        - name: id
+          in: query
+          schema:
+            type: string
+        - name: slug
+          in: query
+          schema:
+            type: string
+      security:
+        - cookieAuth: []
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+        default:
+          description: error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+      operationId: GetPostThumbnail
 servers:
   - url: http://localhost/index.php/wp-json
 components:
